@@ -193,16 +193,16 @@ class SidecarConfigurationTest
         assertThat(i1.jmxRolePassword()).isEqualTo("controlPassword");
 
         // service configuration
-        validateDefaultServiceConfiguration(config.serviceConfiguration());
+        validateServiceConfigurationFromYaml(config.serviceConfiguration());
 
         // ssl configuration
         assertThat(config.sslConfiguration()).isNull();
 
         // health check configuration
-        validateHealthCheckConfiguration(config.healthCheckConfiguration());
+        validateHealthCheckConfigurationFromYaml(config.healthCheckConfiguration());
 
         // cassandra input validation configuration
-        validateDefaultCassandraInputValidationConfiguration(config.cassandraInputValidationConfiguration());
+        validateCassandraInputValidationConfigurationFromYaml(config.cassandraInputValidationConfiguration());
     }
 
     void validateMultipleInstancesSidecarConfiguration(SidecarConfiguration config, boolean withSslConfiguration)
@@ -251,12 +251,12 @@ class SidecarConfigurationTest
         assertThat(i3.jmxSslEnabled()).isFalse();
 
         // service configuration
-        validateDefaultServiceConfiguration(config.serviceConfiguration());
+        validateServiceConfigurationFromYaml(config.serviceConfiguration());
 
         // ssl configuration
         if (withSslConfiguration)
         {
-            validateDefaultSslConfiguration(config.sslConfiguration());
+            validateSslConfigurationFromYaml(config.sslConfiguration());
         }
         else
         {
@@ -264,13 +264,13 @@ class SidecarConfigurationTest
         }
 
         // health check configuration
-        validateHealthCheckConfiguration(config.healthCheckConfiguration());
+        validateHealthCheckConfigurationFromYaml(config.healthCheckConfiguration());
 
         // cassandra input validation configuration
-        validateDefaultCassandraInputValidationConfiguration(config.cassandraInputValidationConfiguration());
+        validateCassandraInputValidationConfigurationFromYaml(config.cassandraInputValidationConfiguration());
     }
 
-    void validateDefaultServiceConfiguration(ServiceConfiguration serviceConfiguration)
+    void validateServiceConfigurationFromYaml(ServiceConfiguration serviceConfiguration)
     {
         assertThat(serviceConfiguration).isNotNull();
         assertThat(serviceConfiguration.host()).isEqualTo("0.0.0.0");
@@ -299,14 +299,14 @@ class SidecarConfigurationTest
         assertThat(trafficShaping.checkIntervalForStatsMillis()).isEqualTo(3000L);
     }
 
-    private void validateHealthCheckConfiguration(HealthCheckConfiguration config)
+    private void validateHealthCheckConfigurationFromYaml(HealthCheckConfiguration config)
     {
         assertThat(config).isNotNull();
         assertThat(config.initialDelayMillis()).isEqualTo(100);
         assertThat(config.checkIntervalMillis()).isEqualTo(30_000);
     }
 
-    void validateDefaultCassandraInputValidationConfiguration(CassandraInputValidationConfiguration config)
+    void validateCassandraInputValidationConfigurationFromYaml(CassandraInputValidationConfiguration config)
     {
         assertThat(config).isNotNull();
         assertThat(config.forbiddenKeyspaces()).containsExactlyInAnyOrder("system_schema",
@@ -323,7 +323,7 @@ class SidecarConfigurationTest
         assertThat(config.allowedPatternForRestrictedComponentName()).isEqualTo("[a-zA-Z0-9_-]+(.db|TOC.txt)");
     }
 
-    void validateDefaultSslConfiguration(SslConfiguration config)
+    void validateSslConfigurationFromYaml(SslConfiguration config)
     {
         assertThat(config).isNotNull();
         assertThat(config.enabled()).isTrue();
@@ -331,6 +331,7 @@ class SidecarConfigurationTest
         assertThat(config.handshakeTimeoutInSeconds()).isEqualTo(25L);
         assertThat(config.clientAuth()).isEqualTo("REQUEST");
         assertThat(config.keystore()).isNotNull();
+        assertThat(config.keystore().type()).isEqualTo("PKCS12");
         assertThat(config.keystore().path()).isEqualTo("path/to/keystore.p12");
         assertThat(config.keystore().password()).isEqualTo("password");
         assertThat(config.keystore().reloadStore()).isTrue();
@@ -340,6 +341,15 @@ class SidecarConfigurationTest
         assertThat(config.truststore().password()).isEqualTo("password");
         assertThat(config.truststore().reloadStore()).isFalse();
         assertThat(config.truststore().checkIntervalInSeconds()).isEqualTo(-1);
+        assertThat(config.secureTransportProtocols()).containsExactly("TLSv1.3");
+        assertThat(config.cipherSuites()).contains("TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
+                                                   "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
+                                                   "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
+                                                   "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
+                                                   "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA",
+                                                   "TLS_RSA_WITH_AES_128_GCM_SHA256",
+                                                   "TLS_RSA_WITH_AES_128_CBC_SHA",
+                                                   "TLS_RSA_WITH_AES_256_CBC_SHA");
     }
 
     private Path yaml(String resourceName)
